--- a/01. Partie législative/Article 86 - 6523950.md
+++ b/01. Partie législative/Article 86 - 6523950.md
@@ -3,30 +3,26 @@
 En ce qui concerne les contraventions ou délits prévus aux articles 80 à 85, l'administrateur des affaires maritimes ne peut
 saisir soit le président du tribunal maritime commercial, soit le procureur de la République, selon les règles établies à
 l'article 36 bis, qu'au vu d'une enquête contradictoire effectuée par ses soins dans les conditions qui seront déterminées
-par un règlement d'administration publique.
-
-**Nota:**
-
-NOTA : Intitulé du titre III modifié par la loi 62-899 du 4 août 1962 art. 3.
+par un décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
 	**Cité par**:
 
 	  - Décret n°56-1219 du 26 novembre 1956 - art. 6 (Ab)
-	  - Loi du 28 mars 1928 - art. 17 (VT)
 	  - Décret n°81-63 du 20 janvier 1981 - art. 6 (Ab)
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 15 (VT)
 	  - Code des transports - art. L1621-9 (VD)
+	  - Loi du 28 mars 1928 - art. 17 (VT)
+	  - Loi n°2002-3 du 3 janvier 2002 - art. 15 (VT)
+
+	**Cite**:
+
+	  - Code disciplinaire et pénal de la marine marchande - art. 36 bis (V)
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
+	**Abrogé par**:
 
-	  - Loi n°62-899 1962-08-04 art. 19 JORF 5 août 1962
-
-	**Cite**:
-
-	  - Code disciplinaire et pénal de la marine marchande - art. 36 bis (V)
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 18 (V)
