--- a/01. Partie législative/Article 94 - 6523965.md
+++ b/01. Partie législative/Article 94 - 6523965.md
@@ -2,9 +2,9 @@
 
 Un décret fixera la forme de procéder devant les tribunaux maritimes commerciaux.
 
-Un règlement d'administration publique détermine les frais qui peuvent être compris sous la dénomination des frais de justice
-pour l'application de la présente loi ; il en établit le tarif, en règle le paiement et le recouvrement, fixe les conditions
-que doivent remplir les parties prenantes et, d'une façon générale, règle tout ce qui s'y rapporte.
+Un décret en Conseil d'Etat détermine les frais qui peuvent être compris sous la dénomination des frais de justice pour
+l'application de la présente loi ; il en établit le tarif, en règle le paiement et le recouvrement, fixe les conditions que
+doivent remplir les parties prenantes et, d'une façon générale, règle tout ce qui s'y rapporte.
 
 **Liens relatifs à cet article**
 
@@ -12,6 +12,6 @@ que doivent remplir les parties prenantes et, d'une façon générale, règle to
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
+	**Abrogé par**:
 
-	  - Loi n°62-899 1962-08-04 art. 24 JORF 5 août 1962
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 18 (V)
