--- a/01. Partie législative/Article 28 - 6523819.md
+++ b/01. Partie législative/Article 28 - 6523819.md
@@ -3,27 +3,23 @@
 Dès que le capitaine a connaissance d'un crime, d'un délit ou d'une contravention commis à bord, il procède à une enquête
 préliminaire conformément aux dispositions du titre II du livre Ier du Code de procédure pénale. Les circonstances du crime,
 du délit ou de la contravention et les énonciations du procès-verbal de l'enquête préliminaire sont mentionnées au livre de
-discipline.
+discipline. 
 
-En cas de nécessité, le capitaine peut faire arrêter préventivement l'inculpé. S'il s'agit d'un mineur de dix-huit ans, ce
-dernier devra, être séparé de tous autres détenus. L'emprisonnement préventif est subordonné à l'observation des règles
-prévues aux deuxième et troisième alinéas de l'article 8. L'imputation de la détention préventive sur la durée de la peine
-est de droit, sauf décision contraire de la juridiction compétente.
-
-**Nota:**
-
-[*Nota : Intitulé du titre III modifié par la loi 62-899 1962-08-04 art. 3.*]
+En cas de nécessité, le capitaine peut faire arrêter préventivement la personne mise en examen. S'il s'agit d'un mineur de
+dix-huit ans, ce dernier devra, dans ce cas, être séparé de tous autres détenus. L'emprisonnement préventif est subordonné à
+l'observation des règles prévues aux deuxième et troisième alinéas de l'article 8. L'imputation de la détention préventive
+sur la durée de la peine est de droit, sauf décision contraire de la juridiction compétente.
 
 **Liens relatifs à cet article**
-
-	**Modifié par**:
-
-	  - Loi n°62-899 1962-08-04 art. 6 JORF 5 août 1962
 
 	**Cité par**:
 
 	  - Loi n°71-569 du 15 juillet 1971 - art. 4 (V)
 	  - Code disciplinaire et pénal de la marine marchande - art. 33 (VT)
+
+	**Modifié par**:
+
+	  - Loi n°93-1013 1993-08-24 art. 46 JORF 25 août 1993 en vigueur le 2 septembre 1993
 
 	**Cite**:
 
