--- a/01. Partie législative/Article 43 - 6523849.md
+++ b/01. Partie législative/Article 43 - 6523849.md
@@ -1,7 +1,7 @@
 # Article 43
 
-Est puni, pour chacune des infractions visées ci-après, d'une amende de 3000 à 6000 francs tout capitaine qui refuse ou
-néglige, sans motif légitime :
+Est puni, pour chacune des infractions visées ci-après, de l'amende prévue pour les contraventions de la 5e classe, tout
+capitaine qui refuse ou néglige, sans motif légitime :
 
 1° De faire les constatations requises en cas de crime ou de délit commis à bord ;
 
@@ -14,9 +14,15 @@ prévoyance des marins français ;
 
 **Nota:**
 
-NOTA : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août 1962).
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Décret n°93-726 1993-03-29 art. 2 JORF 30 mars 1993 en vigueur le 1er mars 1994
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
 
 	**Cite**:
 
