--- a/01. Partie législative/Article 44 - 6523851.md
+++ b/01. Partie législative/Article 44 - 6523851.md
@@ -1,18 +1,30 @@
 # Article 44
 
-Est puni de la peine prévue par l'article 147 du Code pénal, tout capitaine, officier, maître ou homme d'équipage qui inscrit
-frauduleusement sur les documents du bord des faits altérés ou contraires à la vérité [*faux en écriture*].
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+Est puni des peines du délit de faux en écriture publique prévu par le premier alinéa de l'article 441-4 du code pénal, tout
+capitaine, officier, maître ou homme d'équipage qui inscrit frauduleusement sur les documents du bord des faits altérés ou
+contraires à la vérité.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 192 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5223-1 (V)
+
 	**Cite**:
 
-	  - Code pénal 147
+	  - Code pénal - art. 441-4 (M)
 
 	**Codifié par**:
 
