--- a/01. Partie législative/Article 51 - 6523866.md
+++ b/01. Partie législative/Article 51 - 6523866.md
@@ -1,23 +1,30 @@
 # Article 51
 
 Toute personne embarquée qui altère volontairement les vivres, boissons ou autres objets de consommation par le mélange de
-substances non malfaisantes est punie d'un emprisonnement de six jours à six mois.
+substances non malfaisantes est punie de six mois d'emprisonnement.
 
-S'il y a eu emploi de substances malfaisantes, la peine est de deux à cinq ans d'emprisonnement. S'il en est résulté pour une
-ou plusieurs personnes une maladie grave, la peine est celle de la réclusion ; s'il en est résulté la mort sans intention de
-la donner, la peine est celle des travaux forcés à temps.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+S'il y a eu emploi de substances malfaisantes, la peine est de cinq ans d'emprisonnement. S'il en est résulté pour une ou
+plusieurs personnes une maladie grave, la peine est celle de la réclusion ; s'il en est résulté la mort sans intention de la
+donner, la peine est celle des travaux forcés à temps.
 
 **Liens relatifs à cet article**
-
-	**Cité par**:
-
-	  - Code disciplinaire et pénal de la marine marcha... - art. 62-1 (V)
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Cité par**:
+
+	  - Code disciplinaire et pénal de la marine marcha... - art. 62-1 (V)
