--- a/01. Partie législative/Article 54 - 6523872.md
+++ b/01. Partie législative/Article 54 - 6523872.md
@@ -2,19 +2,22 @@
 
 Tout marin qui, après avoir reçu devant l'administrateur des affaires maritimes des avances sur salaires ou parts,
 s'abstient, sans motif légitime, de prendre son service à bord et ne se met pas en mesure de rembourser les avances qui lui
-ont été accordées, est puni des peines prévues à l'article 406 du Code pénal relatif à l'abus de confiance.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+ont été accordées, est puni des peines de l'abus de confiance.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code pénal 406
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 195 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
