--- a/01. Partie législative/Article 55 - 6523874.md
+++ b/01. Partie législative/Article 55 - 6523874.md
@@ -1,7 +1,7 @@
 # Article 55
 
-Est punie d'un emprisonnement de six jours à un mois toute personne embarquée, coupable d'avoir introduit de l'alcool et des
-boissons spiritueuses ou d'en avoir facilité l'introduction à bord, sans l'autorisation expresse du capitaine.
+Est punie d'un mois d'emprisonnement toute personne embarquée, coupable d'avoir introduit de l'alcool et des boissons
+spiritueuses ou d'en avoir facilité l'introduction à bord, sans l'autorisation expresse du capitaine.
 
 Est puni d'une peine double le capitaine ou l'armateur qui a embarqué ou fait embarquer de l'alcool ou des boissons
 spiritueuses, destinées à la consommation de l'équipage, en quantités supérieures aux quantités réglementaires, ou en aura
@@ -9,11 +9,23 @@ autorisé l'embarquement.
 
 **Nota:**
 
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
