--- a/01. Partie législative/Article 58 - 6523882.md
+++ b/01. Partie législative/Article 58 - 6523882.md
@@ -1,22 +1,32 @@
 # Article 58
 
-Est punie des peines prévues à l'article 230 du code pénal toute personne embarquée qui se rend coupable de voies de fait
-contre le capitaine, sans qu'il en soit résulté une incapacité de travail de plus de vingt jours.
-
-Si les voies de fait ont occasionné une incapacité de travail de plus de vingt jours, le coupable est puni conformément aux
-articles 309 et suivants du code pénal.
-
-**Nota:**
-
-NOTA : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août 1962).
-
-Article 230 du code pénal abrogé par l'article 25 de la loi n° 81-82 du 2 février 1981.
+Les violences commises contre le capitaine par toute personne embarquée sont punies conformément aux articles 222-8, 222-10,
+222-12 et 222-13 du code pénal.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 196 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5531-8 (V)
+
 	**Cite**:
 
-	  - Code pénal 210, 309
+	  - Code pénal - art. 222-10 (M)
+	  - Code pénal - art. 222-12 (M)
+	  - Code pénal - art. 222-13 (M)
+	  - Code pénal - art. 222-8 (M)
 
 	**Cité par**:
 
