--- a/01. Partie législative/Article 59 - 6523884.md
+++ b/01. Partie législative/Article 59 - 6523884.md
@@ -1,22 +1,25 @@
 # Article 59
 
-Est puni d'un emprisonnement de six jours à six mois, tout homme d'équipage qui, soit en mer, soit dans un port autre qu'un
-port métropolitain, a, après une sommation formelle du capitaine ou d'un officier spécialement désigné à cet effet par le
+Est puni de six mois d'emprisonnement, tout homme d'équipage qui, soit en mer, soit dans un port autre qu'un port
+métropolitain, a, après une sommation formelle du capitaine ou d'un officier spécialement désigné à cet effet par le
 capitaine, refusé d'obéir ou résisté à un ordre concernant le service.
 
-Est puni d'un emprisonnement de six jours à trois mois, tout homme d'équipage qui, dans un port métropolitain, a, après une
-sommation formelle du capitaine ou d'un officier spécialement désigné à cet effet par le capitaine, refusé d'obéir ou résisté
-à un ordre concernant le service, donné pour assurer la garde ou la sécurité du navire et lorsque la non-exécution de cet
-ordre est de nature à entraîner des conséquences dommageables.
+Est puni de trois mois d'emprisonnement, tout homme d'équipage qui, dans un port métropolitain, a, après une sommation
+formelle du capitaine ou d'un officier spécialement désigné à cet effet par le capitaine, refusé d'obéir ou résisté à un
+ordre concernant le service, donné pour assurer la garde ou la sécurité du navire et lorsque la non-exécution de cet ordre
+est de nature à entraîner des conséquences dommageables.
 
-Si le coupable est un officier, ou maître, les peines prévues aux deux paragraphes précédents sont portées au double.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+Si le coupable est un officier ou maître, les peines prévues aux deux paragraphes précédents sont portées au double.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
 	**Cité par**:
 
