--- a/01. Partie législative/Article 70 - 6523911.md
+++ b/01. Partie législative/Article 70 - 6523911.md
@@ -1,14 +1,9 @@
 # Article 70
 
-Toute personne qui, sur un navire français, exerce sans l'autorisation de l'administrateur des affaires maritimes et hors le
+Toute personne qui, sur un navire français, exerce, sans l'autorisation de l'administrateur des affaires maritimes et hors le
 cas de force majeure, soit le commandement du bâtiment, soit toute autre fonction du bord, sans satisfaire aux conditions
-exigées par les lois et règlements maritimes, est punie d'un emprisonnement de six jours à un an et d'une amende de 360 à
-15000 francs [*sanction - montant - taux en vigueur selon la loi 85-835 1985-08-07 au 1er octobre 1986*] ou de l'une de ces
+exigées par les lois et règlements maritimes, est punie d'un an d'emprisonnement et de 25000 F d'amende ou de l'une de ces
 deux peines seulement.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre IV modifiés par la loi 62-899 1962-08-04 art. 3 et art. 17*].
 
 **Liens relatifs à cet article**
 
@@ -18,7 +13,11 @@ deux peines seulement.
 
 	**Modifié par**:
 
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
 	**Cité par**:
 
