--- a/01. Partie législative/Article 73 - 6523917.md
+++ b/01. Partie législative/Article 73 - 6523917.md
@@ -1,18 +1,26 @@
 # Article 73
 
 Toute personne qui contracte ou tente de contracter un engagement maritime, en produisant sciemment de fausses pièces
-d'identité, est punie d'un emprisonnement de six jours à six mois. La peine est doublée en cas de récidive.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre IV modifiés par la loi 62-899 1962-08-04 art. 3 et art. 17*].
+d'identité, est punie de six mois d'emprisonnement. La peine est doublée en cas de récidive.
 
 **Liens relatifs à cet article**
-
-	**Cité par**:
-
-	  - Code disciplinaire et pénal de la marine marchande - art. 6 (VT)
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Cité par**:
+
+	  - Code disciplinaire et pénal de la marine marchande - art. 6 (VT)
