--- a/01. Partie législative/Article 76 - 6523925.md
+++ b/01. Partie législative/Article 76 - 6523925.md
@@ -4,10 +4,23 @@ Tout capitaine qui, hors le cas d'empêchement légitime, ne dépose pas son rô
 bureau des affaires maritimes ou à la chancellerie du consulat, soit dans les vingt-quatre heures de son arrivée dans un port
 français ou dans un port étranger où réside un consul général, un consul ou un vice-consul de France lorsque le bâtiment doit
 séjourner plus de vingt-quatre heures dans le port (jours fériés exclus), soit dès son arrivée, si le bâtiment doit séjourner
-moins de vingt-quatre heures dans le port, est puni d'une amende de 3000 F à 6000 F.
+moins de vingt-quatre heures dans le port, est puni de l'amende prévue pour les contraventions de la 5e classe.
+
+**Nota:**
+
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Décret n°93-726 1993-03-29 art. 2 JORF 30 mars 1993 en vigueur le 1er mars 1994
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
