--- a/01. Partie législative/Article 81 - 6523936.md
+++ b/01. Partie législative/Article 81 - 6523936.md
@@ -2,18 +2,18 @@
 
 Si l'une des infractions prévues à l'article 80 ou tout autre fait de négligence imputable au capitaine, chef de quart ou
 pilote, a occasionné, pour le navire ou pour un autre navire, soit un abordage, soit un échouement ou un choc contre un
-obstacle visible ou connu, soit une avarie grave du navire ou de sa cargaison, le coupable est puni de six jours à trois mois
-d'emprisonnement et d'une amende de 60 à 15000 francs ou de l'une de ces deux peines seulement.
+obstacle visible ou connu, soit une avarie grave du navire ou de sa cargaison, le coupable est puni de trois mois
+d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulement.
 
 Si l'infraction a eu pour conséquence la perte ou l'innavigabilité absolue d'un navire ou la perte d'une cargaison, ou si
-elle a entraîné soit des blessures graves, soit la mort pour une ou plusieurs personnes, le coupable est puni de trois mois à
-deux ans d'emprisonnement et d'une amende de 180 à 15000 francs ou de l'une de ces deux peines seulement.
-
-**Nota:**
-
-NOTA : Intitulé du titre III modifié par la loi 62-899 du 4 août 1962 art. 3.
+elle a entraîné soit des blessures graves, soit la mort pour une ou plusieurs personnes, le coupable est puni de deux ans
+d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulement.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
 
 	**Cité par**:
 
@@ -21,9 +21,8 @@ NOTA : Intitulé du titre III modifié par la loi 62-899 du 4 août 1962 art. 3.
 
 	**Modifié par**:
 
-	  - Décret n°72-473 1972-06-12 art. 1 JORF 13 juin 1972 en vigueur le 1er juillet 1972
-	  - Décret n°80-567 du 18 juillet 1980 - art. 2 (V) JORF 19 juillet 1980 en vigueur le 25 juillet 1980
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
 
-	**Codifié par**:
+	**Liens**:
 
-	  - Loi n°1926-12-17
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
