--- a/01. Partie législative/Article 82 - 6523939.md
+++ b/01. Partie législative/Article 82 - 6523939.md
@@ -3,24 +3,33 @@
 Toute personne de l'équipage, autre que le capitaine, le chef de quart ou le pilote, qui se rend coupable, pendant son
 service, d'un fait de négligence sans excuse, d'un défaut de vigilance ou de tout autre manquement aux obligations de son
 service ayant occasionné, pour un navire quelconque, soit un abordage, soit un échouement ou un choc contre un obstacle
-visible ou connu, soit une avarie grave d'un navire ou de sa caragaison, est punie d'un emprisonnement de cinq jours au plus
-et d'une amende de 1300 à 3000 F ou de l'une de ces deux peines seulement.
+visible ou connu, soit une avarie grave d'un navire ou de sa cargaison, est punie de l'amende prévue pour les contraventions
+de la 4e classe.
 
 Si l'infraction a eu pour conséquence la perte ou l'innavigabilité absolue d'un navire, ou la perte d'une cargaison, ou si
-elle a entraîné soit des blessures graves, soit la mort pour une ou plusieurs personnes, le coupable est puni de six jours à
-un mois d'emprisonnement et d'une amende de 3000 à 6000 F, ou de l'une de ces deux peines seulement.
+elle a entraîné soit des blessures graves, soit la mort pour une ou plusieurs personnes, le coupable est puni de l'amende
+prévue pour les contraventions de la 5e classe.
 
 **Nota:**
 
-NOTA : L'article 464 du code pénal dans sa rédaction issue de la loi n° 93-913 du 19 juillet 1993, ne prévoit plus comme
-peines de police que l'amende et la confiscation d'objets saisis, et ce dès l'entrée en vigueur de ladite loi.
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports en ce qui concerne le premier
+alinéa du présent article.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Décret n°93-726 1993-03-29 art. 1 et 2 JORF 30 mars 1993 en vigueur le 1er mars 1994
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
 
-	**Liens**:
+	**Abrogé par**:
 
-	  - SPEC_APPLI: Loi n°93-913 1993-07-19
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5242-5 (V)
