--- a/01. Partie législative/Article 84 - 6523945.md
+++ b/01. Partie législative/Article 84 - 6523945.md
@@ -1,22 +1,34 @@
 # Article 84
 
-Est puni d'un emprisonnement de six jours à six mois, tout capitaine qui, en cas de danger, abandonne son navire pendant le
-voyage sans l'avis des officiers et principaux de l'équipage.
+Est puni de six mois d'emprisonnement, tout capitaine qui, en cas de danger, abandonne son navire pendant le voyage sans
+l'avis des officiers et principaux de l'équipage.
 
-Est puni d'un emprisonnement d'un ou deux ans tout capitaine qui, en cas de danger et avant d'abandonner son navire, néglige
+Est puni de deux ans d'emprisonnement tout capitaine qui, en cas de danger et avant d'abandonner son navire, néglige
 d'organiser le sauvetage de l'équipage et des passagers et de sauver les papiers de bord, les dépêches postales et les
 marchandises les plus précieuses de la cargaison.
 
 Est puni de la peine portée au paragraphe précédent, le capitaine qui, forcé d'abandonner son navire, ne reste pas à bord le
 dernier.
 
-**Nota:**
-
-[*Nota : Intitulé du titre III modifié par la loi 62-899 du 4 août 1962 art. 3*].
-
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
 	**Cité par**:
+
+	  - Code des transports - art. L5263-3 (V)
+
+	**Nouveaux textes**:
 
 	  - Code des transports - art. L5263-3 (V)
 
