--- a/01. Partie législative/Article 39 - 6523838.md
+++ b/01. Partie législative/Article 39 - 6523838.md
@@ -1,33 +1,38 @@
 # Article 39
 
-Est puni d'un emprisonnement de six jours à six mois tout officier, maître ou homme d'équipage qui, dans un port
-métropolitain, se rend coupable d'absence irrégulière à bord, lorsqu'il est affecté à un poste de garde ou de sécurité.
+Est puni de six mois d'emprisonnement tout officier, maître ou homme d'équipage qui, dans un port métropolitain, se rend
+coupable d'absence irrégulière à bord, lorsqu'il est affecté à un poste de garde ou de sécurité.
 
 L'administrateur des affaires maritimes, en formulant l'avis prévu à l'article 36 (paragraphe 2) ci-dessus, doit indiquer les
-motifs pour lesquels le poste auquel était affecté le marin constituait un poste de garde ou de sécurité.
+motifs pour lesquels le poste auquel était affecté le marin constituait un poste de garde ou de sécurité [*obligation -
+motivation*].
 
 Lorsque le contrat d'engagement a été conclu à durée déterminée ou indéterminée et que le délai de préavis est expiré, le
 marin doit être relevé du poste qu'il occupe de manière à pouvoir quitter librement le bord. Le capitaine qui aura négligé de
 le relever est puni des peines prévues par le paragraphe 1er de l'article 42 ci-après, et il en est de même, quelle que soit
-la forme du contrat d'engagement, dans le cas prévu par l'article 98, paragraphe 2, du code du travail maritime.
+la forme du contrat d'engagement, dans le cas prévu par l'article 98, paragraphe 2, du Code du travail maritime.
 
 Est puni de la peine prévue au paragraphe 1er du présent article, tout officier, maître ou homme d'équipage, qui se rend
 coupable d'absence irrégulière du bord, soit dans un port métropolitain, après la reprise du service par quarts en vue de
 l'appareillage, soit dans tout autre port, lorsqu'il est de service, ou que son absence, se produisant alors qu'il n'était
 pas de service, a eu pour conséquence de l'empêcher de reprendre son service en temps utile.
 
-**Nota:**
-
-NOTA : Intitulé du titre III modifié par la loi n° 62-899 du 4 août 1962 art. 3.
-
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
 	**Cite**:
 
 	  - Code disciplinaire et pénal de la marine marchande - art. 36 (V)
 	  - Code disciplinaire et pénal de la marine marchande - art. 42 (M)
 	  - Code disciplinaire et pénal de la marine marchande 36, 42, 98
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
