--- a/01. Partie législative/Article 41 - 6523843.md
+++ b/01. Partie législative/Article 41 - 6523843.md
@@ -1,12 +1,7 @@
 # Article 41
 
-Est puni d'une amende de 360 à 15.000 francs [*sanction - montant - taux en vigueur, selon la loi 85-835 1985-08-07, au 1er
-octobre 1986*] tout capitaine qui ne se tient pas en personne dans son navire à l'entrée et à la sortie des ports, havres ou
-rivières.
-
-**Nota:**
-
-[*Nota : Intitulé du titre III modifié par la loi 62-899 1962-08-04 art. 3.*]
+Est puni de 25000 F d'amende tout capitaine qui ne se tient pas en personne dans son navire à l'entrée et à la sortie des
+ports, havres ou rivières.
 
 **Liens relatifs à cet article**
 
@@ -16,5 +11,8 @@ rivières.
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
