--- a/01. Partie législative/Article 42 - 6523846.md
+++ b/01. Partie législative/Article 42 - 6523846.md
@@ -1,34 +1,35 @@
 # Article 42
 
 Tout capitaine, officier ou maître, qui abuse de son autorité ou qui ordonne, autorise ou tolère un abus d'autorité vis-à-vis
-d'une personne embarquée, est puni d'une amende de 180 à 15000 F [*sanction - francs - montant -taux en vigueur selon la loi
-85-835 1985-08-07 au 1er octobre 1986*] et d'un emprisonnement de six jours à six mois, ou de l'une de ces deux peines
+d'une personne embarquée, est puni de 25000 F d'amende et de six mois d'emprisonnement, ou de l'une de ces deux peines
 seulement.
 
-Est puni de la même peine, tout capitaine, officier ou maître, coupable d'outrage caractérisé par parole, geste ou menace,
+Est puni de la même peine, tout capitaine, officier ou maître coupable d'outrage caractérisé par parole, geste ou menace
 envers les hommes de l'équipage.
 
-Tout capitaine, officier ou maître, qui hors les motifs légitimes visés à l'article 2, a usé ou fait user de violence dans
-l'exercice ou à l'occasion de l'exercice de ses fonctions, est puni conformément aux dispositions des articles 186 et 198 du
-Code pénal [*abus d'autorité*]. 
+Tout capitaine, officier ou maître, qui, hors les motifs légitimes visés à l'article 2, a usé ou fait user de violence dans
+l'exercice ou à l'occasion de l'exercice de ses fonctions, est puni conformément aux dispositions des articles 222-8, 222-10,
+222-12 et 222-13 du code pénal réprimant les violences commises par une personne dépositaire de l'autorité publique.
 
 Dans cas prévus aux deux paragraphes précédents, la peine peut être doublée s'il s'agit d'un novice ou d'un mousse.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 1992-12-16 art. 191, 322 et 329 JORF 23 décembre 1992 en vigueur le 1er mars 1994
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 191 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
 
 	**Cite**:
 
-	  - Code pénal 186 et 198
+	  - Code pénal - art. 222-10 (M)
+	  - Code pénal - art. 222-12 (M)
+	  - Code pénal - art. 222-13 (M)
+	  - Code pénal - art. 222-8 (M)
 	  - Code disciplinaire et pénal de la marine marchande - art. 2 (V)
 
 	**Cité par**:
