--- a/01. Partie législative/Article 45 - 6523853.md
+++ b/01. Partie législative/Article 45 - 6523853.md
@@ -1,28 +1,26 @@
 # Article 45
 
-Est puni d'un emprisonnement de six jours à six mois, tout capitaine qui favorise, par son consentement, l'usurpation de
-l'exercice du commandement à son bord.
+Est puni de six mois d'emprisonnement, tout capitaine qui favorise, par son consentement, l'usurpation de l'exercice du
+commandement à son bord.
 
-La même peine d'emprisonnement, à laquelle il peut être joint une amende de 360 à 20.000 F [*sanction - montant - francs -
-taux en vigueur selon la loi 77-1468 1977-12-30 au 1er janvier 1978*], est prononcée contre toute personne qui a pris
-indûment le commandement d'un navire et contre l'armateur qui serait son complice.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+La même peine d'emprisonnement, à laquelle il peut être joint une amende de 25000 F, est prononcée contre toute personne qui
+a pris indûment le commandement d'un navire et contre l'armateur qui serait son complice.
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
+
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977 en vigueur le 1er janvier 1978
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
 	**Cité par**:
 
 	  - Code disciplinaire et pénal de la marine marchande - art. 36 bis (V)
 	  - Code disciplinaire et pénal de la marine marchande - art. 6 (VT)
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
