--- a/01. Partie législative/Article 46 - 6523857.md
+++ b/01. Partie législative/Article 46 - 6523857.md
@@ -2,22 +2,29 @@
 
 Toute personne embarquée, autre que le capitaine, qui commet ou tente de commettre, dans une intention coupable et à l'insu
 de l'armateur, un acte de fraude ou de contrebande de nature à entraîner une condamnation pénale pour l'armement, est punie
-d'un emprisonnement de six jours à trois mois.
+de trois mois d'emprisonnement.
 
 Si le coupable est le capitaine, la peine peut être doublée.
 
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
-
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
 
 	**Cité par**:
 
 	  - Code disciplinaire et pénal de la marine marchande - art. 36 (VT)
 	  - Code disciplinaire et pénal de la marine marchande - art. 6 (VT)
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
