--- a/01. Partie législative/Article 49 - 6523861.md
+++ b/01. Partie législative/Article 49 - 6523861.md
@@ -2,13 +2,7 @@
 
 Toute personne embarquée qui supprime intentionnellement ou conserve abusivement une lettre qui lui est confiée pour être
 remise à une personne embarquée sur le même navire, au lieu de la faire parvenir au destinataire, ou qui, dans les mêmes
-conditions, ouvre une lettre confiée à ses soins, est punie d'un emprisonnement de six jours à trois mois ou d'une amende de
-180 à 15000 francs [*sanction - montant - taux en vigueur selon la loi 85-835 1985-08-07 au 1er octobre 1986*].
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+conditions, ouvre une lettre confiée à ses soins, est punie de trois mois d'emprisonnement ou de 25000 F d'amende.
 
 **Liens relatifs à cet article**
 
@@ -18,5 +12,8 @@ conditions, ouvre une lettre confiée à ses soins, est punie d'un emprisonnemen
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
