--- a/01. Partie législative/Article 50 - 6523864.md
+++ b/01. Partie législative/Article 50 - 6523864.md
@@ -1,21 +1,26 @@
 # Article 50
 
 Tout capitaine, officier, maître ou homme d'équipage qui altère des marchandises faisant partie de la cargaison est puni des
-peines prévues à l'article 387 du Code pénal.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).
-
-Article 387 du Code pénal abrogé par l'article 25 de la loi n° 81-82 du 2 février 1981.*]
+peines encourues pour le délit de destruction, dégradation ou détérioration prévu par l'article 322-2 du code pénal.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code pénal 387
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 193 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Cite**:
+
+	  - Code pénal - art. 322-2 (M)
