--- a/01. Partie législative/Article 53 - 6523870.md
+++ b/01. Partie législative/Article 53 - 6523870.md
@@ -1,25 +1,21 @@
 # Article 53
 
-Les vols commis à bord sont punis conformément aux dispositions du code pénal.
-
-Toutefois, les circonstances aggravantes prévues par les paragraphes 3 et 4 de l'article 386 du code pénal ne modifient pas
-la nature de l'infraction, qui reste un simple délit puni des peines prévues par l'article 401 du code pénal.
-
-Les dispositions précédentes ne font pas obstacle à l'application de l'article 15 (paragraphe 10) de la présente loi.
-
-**Nota:**
-
-NOTA : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août 1962).
-
-Article 386 du code pénal abrogé par l'article 25 de la loi n° 81-82 du 2 février 1981.
+Les vols commis à bord sont punis conformément aux dispositions du Code pénal.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code pénal 386, 401
-	  - Code disciplinaire et pénal de la marine marchande 15
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 194 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
