--- a/01. Partie législative/Article 56 - 6523877.md
+++ b/01. Partie législative/Article 56 - 6523877.md
@@ -1,25 +1,30 @@
 # Article 56
 
-Est puni d'un emprisonnement de six jours à six mois tout capitaine qui s'est trouvé en état d'ivresse à bord de son navire,
-et tout officier, maître ou homme d'équipage qui s'enivre habituellement ou qui s'est trouvé en état d'ivresse pendant le
-quart.
+Est puni de six mois d'emprisonnement tout capitaine qui s'est trouvé en état d'ivresse à bord de son navire, et tout
+officier, maître ou homme d'équipage qui s'enivre habituellement ou qui s'est trouvé en état d'ivresse pendant le quart.
 
 Le double de la peine est prononcé contre tout capitaine qui s'enivre habituellement, sans préjudice des mesures
 disciplinaires prévues à l'article 23 de la présente loi.
 
 **Nota:**
 
-NOTA : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août 1962).
-
 L'article 23 du présent code a été abrogé par le décret 60-1193 1960-11-07 et remplacé par des dispositions réglementaires
 (voir ce texte).
 
 **Liens relatifs à cet article**
 
-	**Cite**:
-
-	  - Code disciplinaire et pénal de la marine marchande 23
-
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5531-13 (VT)
