--- a/01. Partie législative/Article 57 - 6523879.md
+++ b/01. Partie législative/Article 57 - 6523879.md
@@ -1,13 +1,7 @@
 # Article 57
 
-Est puni d'une amende de 180 à 15000 francs [*sanction - francs - montant - taux en vigueur selon la loi 85-835 1985-08-07 au
-1er octobre 1986*] et d'un emprisonnement de six jours à six mois, ou de l'une de ces deux peines seulement, tout officier,
-maître ou homme d'équipage qui se rend coupable d'outrage par parole, geste ou menace envers un supérieur.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
+Est puni de 25000 F d'amende et de six mois d'emprisonnement, ou de l'une de ces deux peines seulement, tout officier, maître
+ou homme d'équipage qui se rend coupable d'outrage par parole, geste ou menace envers un supérieur.
 
 **Liens relatifs à cet article**
 
@@ -17,5 +11,8 @@ maître ou homme d'équipage qui se rend coupable d'outrage par parole, geste ou
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
