--- a/01. Partie législative/Article 62 - 6523889.md
+++ b/01. Partie législative/Article 62 - 6523889.md
@@ -1,25 +1,32 @@
 # Article 62
 
 La troisième faute grave et les fautes graves subséquentes contre la discipline commises au cours du même embarquement sont
-considérées comme délit et punies d'un emprisonnement de six jours à six mois.
+considérées comme délit et punies de six mois d'emprisonnement.
 
 Toutefois, lorsque la nature de la faute et les circonstances qui l'ont accompagnée ne paraissent pas suffisantes à
-l'administrateur des affaires maritimes pour lui permettre de saisir, le procureur de la République, l'administrateur des
+l'administrateur des affaires maritimes pour lui permettre de saisir le procureur de la République, l'administrateur des
 affaires maritimes peut conserver à l'infraction son caractère de faute et lui appliquer les punitions prévues par l'article
 15 ci-dessus. Les fautes légères, réputées fautes graves en vertu du paragraphe 1er de l'article 14, ne peuvent jamais
 constituer des délits.
 
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre III modifiés par la loi 62-899 1962-08-04 art. 3 et art. 16 (JORF 5 août
-1962).*]
-
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code disciplinaire et pénal de la marine marchande 14, 15
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Cite**:
+
+	  - Code disciplinaire et pénal de la marine marchande 14, 15
