--- a/01. Partie législative/Article 64 - 6523897.md
+++ b/01. Partie législative/Article 64 - 6523897.md
@@ -3,23 +3,23 @@
 Tout capitaine requis par l'autorité compétente, comme il est dit aux articles 30 et 31, qui, sans motif légitime, refuse de
 se charger du dossier de l'enquête ou des pièces à conviction ou d'assurer le transport d'un prévenu dans les conditions
 prévues à l'article 31, ou qui ne livre pas le prévenu ou le dossier confié à ses soins à l'autorité maritime désignée pour
-les recevoir, est puni d'une amende de 360 à 20000 francs [*sanction - montant - taux en vigueur, selon la loi 77-1468
-1977-12-30, au 1er janvier 1978*] (1 à 20 F) sans préjudice s'il y a lieu, en cas d'évasion ou de complicité d'évasion, de
-l'application aux personnes embarquées et au prévenu des dispositions des articles 237 à 243 du Code pénal.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre IV modifiés par la loi 62-899 1962-08-04 art. 3 et art. 17*].
+les recevoir, est puni de 25000 F d'amende sans préjudice s'il y a lieu, en cas d'évasion ou de complicité d'évasion, de
+l'application aux personnes embarquées et au prévenu des dispositions des articles 237 à 243 du Code pénal [*ancien*].
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977 en vigueur le 1er janvier 1978
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
 	**Cite**:
 
-	  - Code pénal 237 à 243
+	  - Code pénal - art. 434-32 (M)
+	  - Code pénal - art. 434-33 (M)
 	  - Code disciplinaire et pénal de la marine marchande 30 et 31
 
 	**Cité par**:
