--- a/01. Partie législative/Article 67 - 6523903.md
+++ b/01. Partie législative/Article 67 - 6523903.md
@@ -1,17 +1,12 @@
 # Article 67
 
 Tout capitaine qui, ayant laissé à terre, dans un port où n'existe aucune autorité française, un officier, un maître ou un
-homme d'équipage malade ou blessé, ne lui procure pas les moyens d'assurer son traitement et son rapatriement, est puni d'une
-amende de 180 à 15000 francs [*sanction - montant - taux en vigueur, selon la loi 85-835 1985-08-07 au 1er octobre 1986*] et
-d'un emprisonnement de six jours à deux mois [*durée*], ou de l'une de ces deux peines seulement.
+homme d'équipage malade ou blessé, ne lui procure pas les moyens d'assurer son traitement et son rapatriement, est puni de
+25000 F d'amende et de deux mois d'emprisonnement, ou de l'une de ces deux peines seulement.
 
 La même peine est encourue par le capitaine qui, ayant laissé à terre, avant qu'il ait atteint son lieu de destination, un
 passager malade ou blessé, ne donne pas avis de cette mesure à l'autorité consulaire du pays auquel appartient le passager
 débarqué ou, à défaut, à l'autorité locale.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre IV modifiés par la loi 62-899 1962-08-04 art. 3 et art. 17*].
 
 **Liens relatifs à cet article**
 
@@ -21,5 +16,8 @@ débarqué ou, à défaut, à l'autorité locale.
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977 en vigueur le 1er janvier 1978
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
