--- a/01. Partie législative/Article 68 - 6523906.md
+++ b/01. Partie législative/Article 68 - 6523906.md
@@ -1,20 +1,23 @@
 # Article 68
 
-Tout armateur qui exploite ou fait exploiter à terre un économat, en violation des dispositions de l'article 77 du code du
+Tout armateur qui exploite ou fait exploiter à terre un économat, en violation des dispositions de l'article 77 du Code du
 travail maritime, ou impose aux marins, en violation dudit article, l'obligation de dépenser tout ou partie de leurs salaires
-dans des magasins indiqués par lui, est puni d'une amende de 180 à 20000 francs, qui peut être portée à 30000 francs en cas
-de récidive.
-
-**Nota:**
-
-NOTA : Intitulés du titre III et du chapitre IV modifiés par la loi 62-899 1962-08-04 art. 3 et art. 17.
+dans des magasins indiqués par lui, est puni de 25000 F d'amende, qui peut être portée à 50000 F en cas de récidive.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code du travail maritime - art. 77 (V)
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Cite**:
+
+	  - Code du travail maritime - art. 77 (V)
