--- a/01. Partie législative/Article 72 - 6523915.md
+++ b/01. Partie législative/Article 72 - 6523915.md
@@ -1,22 +1,29 @@
 # Article 72
 
 Tout capitaine qui embarque ou débarque une personne de l'équipage sans faire mentionner cet embarquement ou ce débarquement
-sur le rôle d'équipage par l'autorité maritime est puni, pour chaque personne irrégulièrement embarquée ou débarquée, d'une
-amende de 3000 F à 6000 francs, si le bâtiment a une jauge brute dépassant 25 tonneaux, de 1300 F à 3000 F dans le cas
-contraire.
+sur le rôle d'équipage par l'autorité maritime est puni, pour chaque personne irrégulièrement embarquée ou débarquée, de
+l'amende prévue pour les contraventions de la 5e classe, si le bâtiment a une jauge brute dépassant 25 tonneaux, de l'amende
+prévue pour les contraventions de la 4e classe dans le cas contraire.
 
 Les mêmes peines sont encourues pour chaque passager admis à bord sans avoir été inscrit à la suite du rôle d'équipage.
 Toutefois, des dispositions spéciales pourront être établies par décret pour certaines navigations ; les infractions à ces
-dispositions seront punies d'une amende de 600 F à 1300 F.
+dispositions seront punies de l'amende prévue pour les contraventions de la 3e classe.
 
 **Nota:**
 
-NOTA : Intitulés du titre III et du chapitre IV modifiés par la loi 62-899 1962-08-04 art. 3 et art. 17.
-
-Le décret 60-405 du 22 avril 1960 comporte des dérogations aux dispositions de l'article 72.
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 9 : L'abrogation des dispositions mentionnées à l'article 7 ne prendra
+effet qu'à compter de la publication des dispositions réglementaires du code des transports.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Décret n°93-726 1993-03-29 art. 2 JORF 30 mars 1993 en vigueur le 1er mars 1994
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
