--- a/01. Partie législative/Article 75 - 6523922.md
+++ b/01. Partie législative/Article 75 - 6523922.md
@@ -1,20 +1,11 @@
 # Article 75
 
 Toute personne embarquée qui, à l'insu du capitaine, introduit sur un navire, en vue de les faire transporter, des
-marchandises non inscrites au manifeste, est punie d'une amende de 60 à 15000 francs [*sanctions - montant - taux en vigueur
-selon la loi 85-835 1985-08-07 au 1er octobre 1986*] et d'un emprisonnement de six jours à six mois [*durée*], ou de l'une de
-ces deux peines seulement, sans préjudice du droit du capitaine de jeter à la mer, dans les conditions de l'article 23 du
-Code du travail maritime, les marchandises indûment chargées sur le bâtiment.
-
-**Nota:**
-
-[*Nota : Intitulés du titre III et du chapitre IV modifiés par la loi 62-899 1962-08-04 art. 3 et art. 17*].
+marchandises non inscrites au manifeste, est punie de 25000 F d'amende et de six mois d'emprisonnement, ou de l'une de ces
+deux peines seulement, sans préjudice du droit du capitaine de jeter à la mer, dans les conditions de l'article 23 du Code du
+travail maritime, les marchandises indûment chargées sur le bâtiment.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code du travail maritime - art. 23 (V)
 
 	**Codifié par**:
 
@@ -22,5 +13,12 @@ Code du travail maritime, les marchandises indûment chargées sur le bâtiment.
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Cite**:
+
+	  - Code du travail maritime - art. 23 (V)
