--- a/01. Partie législative/Article 78 - 6523928.md
+++ b/01. Partie législative/Article 78 - 6523928.md
@@ -1,7 +1,7 @@
 # Article 78
 
 Tout capitaine qui ne se conforme pas aux dispositions fixées par décret sur les marques extérieures d'identité des navires,
-ou qui efface, altère, couvre ou masques lesdites marques est puni d'une amende de 60 à 15000 francs.
+ou qui efface, altère, couvre ou masques lesdites marques est puni de 25000 F d'amende.
 
 **Liens relatifs à cet article**
 
@@ -13,3 +13,11 @@ ou qui efface, altère, couvre ou masques lesdites marques est puni d'une amende
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
+
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
