--- a/01. Partie législative/Article 79 - 6523931.md
+++ b/01. Partie législative/Article 79 - 6523931.md
@@ -1,15 +1,9 @@
 # Article 79
 
 Toute personne qui, en dehors des cas prévus par le Code de justice militaire, échoue, perd ou détruit, volontairement et
-dans une intention criminelle, un navire quelconque, par quelque moyen que ce soit, est punie des peines établies par les
-articles 434 et 435 du Code pénal.
-
-Le maximum de la peine est appliqué au délinquant qui est chargé, à quelque titre que ce soit, de la conduite du navire ou
-qui le dirige comme pilote.
-
-**Nota:**
-
-[*Nota : Intitulé du titre III modifié par la loi 62-899 du 4 août 1962 art. 3*].
+dans une intention criminelle, un navire quelconque, par quelque moyen que ce soit, est punie des peines encourues pour les
+destructions, dégradations et détériorations dangereuses pour les personnes, réprimées par les articles 322-6 à 322-11 du
+code pénal.
 
 **Liens relatifs à cet article**
 
@@ -17,9 +11,25 @@ qui le dirige comme pilote.
 
 	  - Loi n°69-8 du 3 janvier 1969 - art. 21 (VT)
 
+	**Modifié par**:
+
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 197 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5263-2 (V)
+
 	**Cite**:
 
-	  - Code disciplinaire et pénal de la marine marchande 434 et 435
+	  - Code pénal 322-6 à 322-11
 
 	**Codifié par**:
 
