--- a/01. Partie législative/Article 80 - 6523933.md
+++ b/01. Partie législative/Article 80 - 6523933.md
@@ -1,16 +1,11 @@
 # Article 80
 
-Est puni de six jours à trois mois d'emprisonnement [*durée*] et d'une amende de 60 à 15000 francs [*sanctions - montant -
-taux en vigueur, selon la loi 85-835 du 7 août 1985*], ou de l'une de ces deux peines seulement, tout capitaine ou chef de
-quart qui se rend coupable d'une infraction aux règles prescrites par les règlements maritimes, soit sur les feux à allumer
-la nuit et les signaux à faire en temps de brume, soit sur la route à suivre et les manoeuvres à exécuter en cas de rencontre
-d'un bâtiment.
+Est puni de trois mois d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulement, tout capitaine ou
+chef de quart qui se rend coupable d'une infraction aux règles prescrites par les règlements maritimes, soit sur les feux à
+allumer la nuit et les signaux à faire en temps de brume, soit sur la route à suivre et les manoeuvres à exécuter en cas de
+rencontre d'un bâtiment.
 
-Est puni de la même peine, tout pilote qui se rend, coupable d'une infraction aux règles sur la route à suivre.
-
-**Nota:**
-
-[*Nota : Intitulé du titre III modifié par la loi 62-899 du 4 août 1962 art. 3*].
+Est puni de la même peine, tout pilote qui se rend coupable d'une infraction aux règles sur la route à suivre.
 
 **Liens relatifs à cet article**
 
@@ -24,6 +19,8 @@ Est puni de la même peine, tout pilote qui se rend, coupable d'une infraction a
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977
-	  - Loi n°79-1 du 2 janvier 1979 - art. 4 () JORF 3 janvier 1979
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
