--- a/01. Partie législative/Article 83 - 6523942.md
+++ b/01. Partie législative/Article 83 - 6523942.md
@@ -1,7 +1,6 @@
 # Article 83
 
-Est puni d'une amende de 720 à 20000 francs [*sanctions - montant - taux en vigueur, selon la loi 77-1468 1977-12-30, au 1er
-janvier 1978*], et d'un emprisonnement d'un mois à deux ans, ou de l'une de ces deux peines seulement, tout capitaine qui,
+Est puni de 25000 F d'amende et de deux ans d'emprisonnement, ou de l'une de ces deux peines seulement, tout capitaine qui,
 après abordage et autant qu'il peut le faire sans danger pour son navire, son équipage et ses passagers, néglige d'employer
 tous les moyens dont il dispose pour sauver du danger créé par l'abordage l'autre bâtiment, son équipage et ses passagers.
 
@@ -12,9 +11,8 @@ de la non-exécution des obligations visées au présent paragraphe, la peine pe
 
 Après un abordage, le capitaine de chacun des navires abordés qui, s'il le peut sans danger pour son navire, son équipage ou
 ses passagers, ne fait pas connaître au capitaine de l'autre navire les noms de son propre navire et des ports d'attache, de
-départ et de destination de celui-ci, est puni d'une amende de 180 à 15000 francs [*sanction - montant - taux en vigueur,
-selon la loi 85-835 1985-08-07, au 1er octobre 1986*] et d'un emprisonnement de six jours à trois mois, ou de l'une de ces
-deux peines seulement.
+départ et de destination de celui-ci, est puni de 25000 F d'amende et de trois mois d'emprisonnement, ou de l'une de ces deux
+peines seulement.
 
 **Liens relatifs à cet article**
 
@@ -24,5 +22,8 @@ deux peines seulement.
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977 en vigueur le 1er janvier 1978
-	  - Loi n°85-835 du 7 août 1985 - art. 8 (VT) JORF 8 août 1985 en vigueur le 1er octobre 1986
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
