--- a/01. Partie législative/Article 85 - 6523947.md
+++ b/01. Partie législative/Article 85 - 6523947.md
@@ -1,8 +1,8 @@
 # Article 85
 
 Tout capitaine qui, alors qu'il peut le faire sans danger sérieux pour son navire, son équipage ou ses passagers, ne prête
-pas assistance à toute personne, même ennemie, trouvée en mer en danger de se perdre, est puni d'une amende de 180 à 20000
-francs et d'un emprisonnement d'un mois à deux ans, ou de l'une de ces peines seulement.
+pas assistance à toute personne, même ennemie, trouvée en mer en danger de se perdre, est puni de 25000 F d'amende et de deux
+ans d'emprisonnement, ou de l'une de ces deux peines seulement.
 
 **Nota:**
 
@@ -17,4 +17,8 @@ du 26 décembre 1966.
 
 	**Modifié par**:
 
-	  - Loi n°77-1468 du 30 décembre 1977 - art. 16 (V) JORF 31 décembre 1977 en vigueur le 1er janvier 1978
+	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
