--- a/01. Partie législative/Article 49 - 6523861.md
+++ b/01. Partie législative/Article 49 - 6523861.md
@@ -2,7 +2,7 @@
 
 Toute personne embarquée qui supprime intentionnellement ou conserve abusivement une lettre qui lui est confiée pour être
 remise à une personne embarquée sur le même navire, au lieu de la faire parvenir au destinataire, ou qui, dans les mêmes
-conditions, ouvre une lettre confiée à ses soins, est punie de trois mois d'emprisonnement ou de 25000 F d'amende.
+conditions, ouvre une lettre confiée à ses soins, est punie de trois mois d'emprisonnement ou de 3750 euros d'amende.
 
 **Liens relatifs à cet article**
 
@@ -10,10 +10,14 @@ conditions, ouvre une lettre confiée à ses soins, est punie de trois mois d'em
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
