--- a/01. Partie législative/Article 67 - 6523903.md
+++ b/01. Partie législative/Article 67 - 6523903.md
@@ -2,7 +2,7 @@
 
 Tout capitaine qui, ayant laissé à terre, dans un port où n'existe aucune autorité française, un officier, un maître ou un
 homme d'équipage malade ou blessé, ne lui procure pas les moyens d'assurer son traitement et son rapatriement, est puni de
-25000 F d'amende et de deux mois d'emprisonnement, ou de l'une de ces deux peines seulement.
+3750 euros d'amende et de deux mois d'emprisonnement, ou de l'une de ces deux peines seulement.
 
 La même peine est encourue par le capitaine qui, ayant laissé à terre, avant qu'il ait atteint son lieu de destination, un
 passager malade ou blessé, ne donne pas avis de cette mesure à l'autorité consulaire du pays auquel appartient le passager
@@ -14,10 +14,18 @@ débarqué ou, à défaut, à l'autorité locale.
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5531-14 (V)
