--- a/01. Partie législative/Article 69 - 6523909.md
+++ b/01. Partie législative/Article 69 - 6523909.md
@@ -1,6 +1,6 @@
 # Article 69
 
-Est puni d'une amende de 25 000 F, pour chaque infraction constatée, tout armateur ou propriétaire de navire qui ne se
+Est puni d'une amende de 3 750 euros, pour chaque infraction constatée, tout armateur ou propriétaire de navire qui ne se
 conforme pas aux prescriptions du Code du travail maritime relatives aux réglementations du travail, de la nourriture et du
 couchage à bord des navires et aux prescriptions des règlements d'administration publique rendus pour leur application.
 
@@ -12,16 +12,25 @@ propriétaire, s'il est prouvé que le capitaine a reçu un ordre écrit ou verb
 Les peines prévues aux deux paragraphes précédents peuvent être portées au double en cas de récidive. Il y a récidive lorsque
 le contrevenant a subi, dans les douze mois qui précèdent, une condamnation pour des faits réprimés par le présent article.
 
+**Nota:**
+
+Ordonnance n° 2010-1307 du 28 octobre 2010 article 7 : Le présent article est abrogé en tant qu'il concerne la durée du
+travail, le repos et l'âge d'admission des marins.
+
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 329 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
 
 	**Cité par**:
 
 	  - Décret n°2006-214 du 22 février 2006 - art. 3 (V)
 	  - Décret n°2006-534 du 10 mai 2006 - art. 15 (M)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
 
 	**Cite**:
 
