--- a/01. Partie législative/Article 70 - 6523911.md
+++ b/01. Partie législative/Article 70 - 6523911.md
@@ -2,23 +2,31 @@
 
 Toute personne qui, sur un navire français, exerce, sans l'autorisation de l'administrateur des affaires maritimes et hors le
 cas de force majeure, soit le commandement du bâtiment, soit toute autre fonction du bord, sans satisfaire aux conditions
-exigées par les lois et règlements maritimes, est punie d'un an d'emprisonnement et de 25000 F d'amende ou de l'une de ces
-deux peines seulement.
+exigées par les lois et règlements maritimes, est punie d'un an d'emprisonnement et de 3 750 euros d'amende ou de l'une de
+ces deux peines seulement.
 
 **Liens relatifs à cet article**
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5523-2 (V)
+
+	**Cité par**:
+
+	  - Code disciplinaire et pénal de la marine marchande - art. 6 (VT)
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
-	**Cité par**:
+	**Modifié par**:
 
-	  - Code disciplinaire et pénal de la marine marchande - art. 6 (VT)
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
