--- a/01. Partie législative/Article 83 - 6523942.md
+++ b/01. Partie législative/Article 83 - 6523942.md
@@ -1,8 +1,9 @@
 # Article 83
 
-Est puni de 25000 F d'amende et de deux ans d'emprisonnement, ou de l'une de ces deux peines seulement, tout capitaine qui,
-après abordage et autant qu'il peut le faire sans danger pour son navire, son équipage et ses passagers, néglige d'employer
-tous les moyens dont il dispose pour sauver du danger créé par l'abordage l'autre bâtiment, son équipage et ses passagers.
+Est puni de 3 750 euros d'amende et de deux ans d'emprisonnement, ou de l'une de ces deux peines seulement, tout capitaine
+qui, après abordage et autant qu'il peut le faire sans danger pour son navire, son équipage et ses passagers, néglige
+d'employer tous les moyens dont il dispose pour sauver du danger créé par l'abordage l'autre bâtiment, son équipage et ses
+passagers.
 
 Est puni de la même peine le capitaine qui, hors le cas de force majeure, s'éloigne du lieu du sinistre avant de s'être
 assuré qu'une plus longue assistance est inutile à l'autre bâtiment, à son équipage et à ses passagers, et si le bâtiment a
@@ -11,8 +12,8 @@ de la non-exécution des obligations visées au présent paragraphe, la peine pe
 
 Après un abordage, le capitaine de chacun des navires abordés qui, s'il le peut sans danger pour son navire, son équipage ou
 ses passagers, ne fait pas connaître au capitaine de l'autre navire les noms de son propre navire et des ports d'attache, de
-départ et de destination de celui-ci, est puni de 25000 F d'amende et de trois mois d'emprisonnement, ou de l'une de ces deux
-peines seulement.
+départ et de destination de celui-ci, est puni de 3 750 euros d'amende et de trois mois d'emprisonnement, ou de l'une de ces
+deux peines seulement.
 
 **Liens relatifs à cet article**
 
@@ -20,10 +21,19 @@ peines seulement.
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5262-6 (V)
+	  - Code des transports - art. L5263-1 (V)
