--- a/01. Partie législative/Article 41 - 6523843.md
+++ b/01. Partie législative/Article 41 - 6523843.md
@@ -1,6 +1,6 @@
 # Article 41
 
-Est puni de 25000 F d'amende tout capitaine qui ne se tient pas en personne dans son navire à l'entrée et à la sortie des
+Est puni de 3750 euros d'amende tout capitaine qui ne se tient pas en personne dans son navire à l'entrée et à la sortie des
 ports, havres ou rivières.
 
 **Liens relatifs à cet article**
@@ -9,10 +9,10 @@ ports, havres ou rivières.
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
