--- a/01. Partie législative/Article 42 - 6523846.md
+++ b/01. Partie législative/Article 42 - 6523846.md
@@ -1,7 +1,7 @@
 # Article 42
 
 Tout capitaine, officier ou maître, qui abuse de son autorité ou qui ordonne, autorise ou tolère un abus d'autorité vis-à-vis
-d'une personne embarquée, est puni de 25000 F d'amende et de six mois d'emprisonnement, ou de l'une de ces deux peines
+d'une personne embarquée, est puni de 3750 euros d'amende et de six mois d'emprisonnement, ou de l'une de ces deux peines
 seulement.
 
 Est puni de la même peine, tout capitaine, officier ou maître coupable d'outrage caractérisé par parole, geste ou menace
@@ -15,14 +15,19 @@ Dans cas prévus aux deux paragraphes précédents, la peine peut être doublée
 
 **Liens relatifs à cet article**
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 1992-12-16 art. 191, 322 et 329 JORF 23 décembre 1992 en vigueur le 1er mars 1994
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 191 () JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 12 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5531-10 (V)
+	  - Code des transports - art. L5531-11 (Ab)
+	  - Code des transports - art. L5531-9 (V)
 
 	**Cite**:
 
