--- a/01. Partie législative/Article 45 - 6523853.md
+++ b/01. Partie législative/Article 45 - 6523853.md
@@ -3,24 +3,32 @@
 Est puni de six mois d'emprisonnement, tout capitaine qui favorise, par son consentement, l'usurpation de l'exercice du
 commandement à son bord.
 
-La même peine d'emprisonnement, à laquelle il peut être joint une amende de 25000 F, est prononcée contre toute personne qui
-a pris indûment le commandement d'un navire et contre l'armateur qui serait son complice.
+La même peine d'emprisonnement, à laquelle il peut être joint une amende de 3750 euros, est prononcée contre toute personne
+qui a pris indûment le commandement d'un navire et contre l'armateur qui serait son complice.
 
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
-
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
 
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5531-12 (V)
+
 	**Cité par**:
 
 	  - Code disciplinaire et pénal de la marine marchande - art. 36 bis (V)
 	  - Code disciplinaire et pénal de la marine marchande - art. 6 (VT)
+
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
