--- a/01. Partie législative/Article 57 - 6523879.md
+++ b/01. Partie législative/Article 57 - 6523879.md
@@ -1,18 +1,26 @@
 # Article 57
 
-Est puni de 25000 F d'amende et de six mois d'emprisonnement, ou de l'une de ces deux peines seulement, tout officier, maître
-ou homme d'équipage qui se rend coupable d'outrage par parole, geste ou menace envers un supérieur.
+Est puni de 3750 euros d'amende et de six mois d'emprisonnement, ou de l'une de ces deux peines seulement, tout officier,
+maître ou homme d'équipage qui se rend coupable d'outrage par parole, geste ou menace envers un supérieur.
 
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
-
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
 
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5531-11 (Ab)
+
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
