--- a/01. Partie législative/Article 63 - 6523891.md
+++ b/01. Partie législative/Article 63 - 6523891.md
@@ -3,7 +3,7 @@
 Toute personne, même étrangère, embarquée sur un navire français ou étranger, qui, dans les eaux maritimes et jusqu'à la
 limite des eaux territoriales françaises, ne se conforme pas aux règlements et aux ordres émanant des autorités maritimes et
 relatifs, soit à la police des eaux et rades, soit à la police de la navigation maritime, est punie de six mois
-d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulement.
+d'emprisonnement et de 3750 euros d'amende, ou de l'une de ces deux peines seulement.
 
 La même peine est encourue par toute personne embarquée sur un navire français qui, hors des eaux territoriales françaises,
 ne se conforme pas aux ordres régulièrement donnés par un consul général, consul ou vice-consul de France, par une autorité
@@ -13,9 +13,9 @@ Le capitaine de tout navire français ou étranger, qui aura enfreint dans les e
 soit les règles de circulation maritime édictées en application de la Convention internationale de Londres du 20 octobre 1972
 en vue de prévenir les abordages en mer et relatives aux dispositifs de séparation de trafic, soit les règles édictées par
 les préfets maritimes en ce qui concerne les distances minimales de passage le long des côtes françaises, sera puni d'une
-peine de deux ans d'emprisonnement et de 50000 F d'amende ou de l'une de ces deux peines seulement. Toutefois, lorsque
+peine de deux ans d'emprisonnement et de 7500 euros d'amende ou de l'une de ces deux peines seulement. Toutefois, lorsque
 l'infraction est commise par le capitaine d'un bâtiment français ou étranger transportant une cargaison d'hydrocarbures ou
-d'autres substances dangereuses définies par décret, l'amende est de 1000000 F.
+d'autres substances dangereuses définies par décret, l'amende est de 150000 euros.
 
 Est puni des peines prévues par l'alinéa précédent le capitaine de tout navire français qui aura, hors des eaux territoriales
 ou intérieures françaises, enfreint les règles de circulation maritime édictées en application de la convention
@@ -23,24 +23,33 @@ internationale de Londres du 20 octobre 1972 en vue de prévenir les abordages e
 séparation de trafic.
 
 Si les infractions prévues au présent article ont été commises en temps de guerre, la peine peut être portée au triple et la
-connaissance desdites infractions appartient aux tribunaux maritimes.RL>
-
-**Nota:**
-
-NOTA : Les dispositions des alinéas 1 et 2 de l'article 63 ont valeur réglementaire selon la loi du 8 décembre 1939.
+connaissance desdites infractions appartient aux tribunaux maritimes.
 
 **Liens relatifs à cet article**
 
 	**Cité par**:
 
+	  - Loi n°70-1264 du 23 décembre 1970 - art. 8 (V)
+	  - Décret n°2017-426 du 28 mars 2017 (V)
 	  - Code de l'environnement - art. L331-19 (V)
 	  - Code de l'environnement - art. L332-22 (V)
 	  - Code de l'environnement - art. L334-6 (VT)
 	  - Code disciplinaire et pénal de la marine marchande - art. 38 (VT)
 	  - Code rural - art. L241-15 (Ab)
 	  - Code rural - art. L242-26 (Ab)
-	  - Loi n°70-1264 du 23 décembre 1970 - art. 8 (V)
-	  - Décret n°2017-426 du 28 mars 2017 (V)
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5242-1 (V)
+	  - Code des transports - art. L5242-2 (V)
 
 	**Cite**:
 
@@ -49,11 +58,3 @@ NOTA : Les dispositions des alinéas 1 et 2 de l'article 63 ont valeur réglemen
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
-
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
-	**Liens**:
-
-	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
