--- a/01. Partie législative/Article 64 - 6523897.md
+++ b/01. Partie législative/Article 64 - 6523897.md
@@ -3,18 +3,22 @@
 Tout capitaine requis par l'autorité compétente, comme il est dit aux articles 30 et 31, qui, sans motif légitime, refuse de
 se charger du dossier de l'enquête ou des pièces à conviction ou d'assurer le transport d'un prévenu dans les conditions
 prévues à l'article 31, ou qui ne livre pas le prévenu ou le dossier confié à ses soins à l'autorité maritime désignée pour
-les recevoir, est puni de 25000 F d'amende sans préjudice s'il y a lieu, en cas d'évasion ou de complicité d'évasion, de
-l'application aux personnes embarquées et au prévenu des dispositions des articles 237 à 243 du Code pénal [*ancien*].
+les recevoir, est puni de 3 750 euros d'amende sans préjudice s'il y a lieu, en cas d'évasion ou de complicité d'évasion, de
+l'application aux personnes embarquées et au prévenu des dispositions des articles 237 à 243 du Code pénal.
 
 **Liens relatifs à cet article**
-
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
 
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 18 (V)
 
 	**Cite**:
 
