--- a/01. Partie législative/Article 68 - 6523906.md
+++ b/01. Partie législative/Article 68 - 6523906.md
@@ -2,22 +2,26 @@
 
 Tout armateur qui exploite ou fait exploiter à terre un économat, en violation des dispositions de l'article 77 du Code du
 travail maritime, ou impose aux marins, en violation dudit article, l'obligation de dépenser tout ou partie de leurs salaires
-dans des magasins indiqués par lui, est puni de 25000 F d'amende, qui peut être portée à 50000 F en cas de récidive.
+dans des magasins indiqués par lui, est puni de 3 750 euros d'amende, qui peut être portée à 7 500 euros en cas de récidive.
 
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
-
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
 
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
 	**Cite**:
 
 	  - Code du travail maritime - art. 77 (V)
+
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
