--- a/01. Partie législative/Article 75 - 6523922.md
+++ b/01. Partie législative/Article 75 - 6523922.md
@@ -1,9 +1,9 @@
 # Article 75
 
 Toute personne embarquée qui, à l'insu du capitaine, introduit sur un navire, en vue de les faire transporter, des
-marchandises non inscrites au manifeste, est punie de 25000 F d'amende et de six mois d'emprisonnement, ou de l'une de ces
-deux peines seulement, sans préjudice du droit du capitaine de jeter à la mer, dans les conditions de l'article 23 du Code du
-travail maritime, les marchandises indûment chargées sur le bâtiment.
+marchandises non inscrites au manifeste, est punie de 3 750 euros d'amende et de six mois d'emprisonnement, ou de l'une de
+ces deux peines seulement, sans préjudice du droit du capitaine de jeter à la mer, dans les conditions de l'article 23 du
+Code du travail maritime, les marchandises indûment chargées sur le bâtiment.
 
 **Liens relatifs à cet article**
 
@@ -11,13 +11,17 @@ travail maritime, les marchandises indûment chargées sur le bâtiment.
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
 
 	**Cite**:
 
