--- a/01. Partie législative/Article 78 - 6523928.md
+++ b/01. Partie législative/Article 78 - 6523928.md
@@ -1,9 +1,25 @@
 # Article 78
 
 Tout capitaine qui ne se conforme pas aux dispositions fixées par décret sur les marques extérieures d'identité des navires,
-ou qui efface, altère, couvre ou masques lesdites marques est puni de 25000 F d'amende.
+ou qui efface, altère, couvre ou masques lesdites marques est puni de 3 750 euros d'amende.
 
 **Liens relatifs à cet article**
+
+	**Liens**:
+
+	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5111-2 (V)
 
 	**Cité par**:
 
@@ -13,11 +29,3 @@ ou qui efface, altère, couvre ou masques lesdites marques est puni de 25000 F d
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
-
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
-	**Liens**:
-
-	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
