--- a/01. Partie législative/Article 80 - 6523933.md
+++ b/01. Partie législative/Article 80 - 6523933.md
@@ -1,26 +1,34 @@
 # Article 80
 
-Est puni de trois mois d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulement, tout capitaine ou
-chef de quart qui se rend coupable d'une infraction aux règles prescrites par les règlements maritimes, soit sur les feux à
-allumer la nuit et les signaux à faire en temps de brume, soit sur la route à suivre et les manoeuvres à exécuter en cas de
+Est puni de trois mois d'emprisonnement et de 3 750 euros d'amende, ou de l'une de ces deux peines seulement, tout capitaine
+ou chef de quart qui se rend coupable d'une infraction aux règles prescrites par les règlements maritimes, soit sur les feux
+à allumer la nuit et les signaux à faire en temps de brume, soit sur la route à suivre et les manoeuvres à exécuter en cas de
 rencontre d'un bâtiment.
 
 Est puni de la même peine, tout pilote qui se rend coupable d'une infraction aux règles sur la route à suivre.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
-
 	**Cité par**:
 
 	  - Loi n°68-1181 du 30 décembre 1968 - art. 30 (Ab)
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5242-3 (V)
+
+	**Codifié par**:
+
+	  - Loi n°1926-12-17
