--- a/01. Partie législative/Article 81 - 6523936.md
+++ b/01. Partie législative/Article 81 - 6523936.md
@@ -3,11 +3,11 @@
 Si l'une des infractions prévues à l'article 80 ou tout autre fait de négligence imputable au capitaine, chef de quart ou
 pilote, a occasionné, pour le navire ou pour un autre navire, soit un abordage, soit un échouement ou un choc contre un
 obstacle visible ou connu, soit une avarie grave du navire ou de sa cargaison, le coupable est puni de trois mois
-d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulement.
+d'emprisonnement et de 3750 euros d'amende, ou de l'une de ces deux peines seulement.
 
 Si l'infraction a eu pour conséquence la perte ou l'innavigabilité absolue d'un navire ou la perte d'une cargaison, ou si
 elle a entraîné soit des blessures graves, soit la mort pour une ou plusieurs personnes, le coupable est puni de deux ans
-d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulement.
+d'emprisonnement et de 3 750 euros d'amende, ou de l'une de ces deux peines seulement.
 
 **Liens relatifs à cet article**
 
@@ -19,10 +19,18 @@ d'emprisonnement et de 25000 F d'amende, ou de l'une de ces deux peines seulemen
 
 	  - Loi n°68-1181 du 30 décembre 1968 - art. 30 (Ab)
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5242-4 (V)
