--- a/01. Partie législative/Article 85 - 6523947.md
+++ b/01. Partie législative/Article 85 - 6523947.md
@@ -1,24 +1,27 @@
 # Article 85
 
 Tout capitaine qui, alors qu'il peut le faire sans danger sérieux pour son navire, son équipage ou ses passagers, ne prête
-pas assistance à toute personne, même ennemie, trouvée en mer en danger de se perdre, est puni de 25000 F d'amende et de deux
-ans d'emprisonnement, ou de l'une de ces deux peines seulement.
-
-**Nota:**
-
-NOTA : Sur la répression du délit de fuite en cas d'accident causé par la navigation maritime ou fluviale voir la loi 66-962
-du 26 décembre 1966.
+pas assistance à toute personne, même ennemie, trouvée en mer en danger de se perdre, est puni de 3 750 euros d'amende et de
+deux ans d'emprisonnement, ou de l'une de ces deux peines seulement.
 
 **Liens relatifs à cet article**
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L5262-5 (V)
 
 	**Codifié par**:
 
 	  - Loi n°1926-12-17
 
-	**Modifié par**:
-
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
-
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2000-916 du 19 septembre 2000 - art. 3 (V) JORF 22 septembre 2000 en vigueur le 1er janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
