--- a/01. Partie législative/Article 59 - 6523884.md
+++ b/01. Partie législative/Article 59 - 6523884.md
@@ -1,9 +1,5 @@
 # Article 59
 
-Est puni de six mois d'emprisonnement, tout homme d'équipage qui, soit en mer, soit dans un port autre qu'un port
-métropolitain, a, après une sommation formelle du capitaine ou d'un officier spécialement désigné à cet effet par le
-capitaine, refusé d'obéir ou résisté à un ordre concernant le service.
-
 Est puni de trois mois d'emprisonnement, tout homme d'équipage qui, dans un port métropolitain, a, après une sommation
 formelle du capitaine ou d'un officier spécialement désigné à cet effet par le capitaine, refusé d'obéir ou résisté à un
 ordre concernant le service, donné pour assurer la garde ou la sécurité du navire et lorsque la non-exécution de cet ordre
@@ -13,18 +9,22 @@ Si le coupable est un officier ou maître, les peines prévues aux deux paragrap
 
 **Liens relatifs à cet article**
 
-	**Modifié par**:
+	**Codifié par**:
 
-	  - Loi n°92-1336 du 16 décembre 1992 - art. 322 (V) JORF 23 décembre 1992 en vigueur le 1er mars 1994
+	  - Loi n°1926-12-17
 
 	**Liens**:
 
 	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
 
+	**Modifié par**:
+
+	  - Loi n°2002-73 du 17 janvier 2002 - art. 208 () JORF 18 janvier 2002
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 18 (V)
+
 	**Cité par**:
 
 	  - Code disciplinaire et pénal de la marine marchande - art. 36 bis (V)
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
